<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1"
        tools:context=".AboutActivity">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/textView_style"
                android:layout_margin="20dp"
                android:text="Add any unique number to identify sms keyword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/code_input" />


            <TextView
                style="@style/textView_style"
                android:layout_margin="20dp"
                android:text="Add your sms response message as below"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/table_input" />

            <TextView
                style="@style/textView_style"
                android:layout_margin="20dp"
                android:text="Save your sms settings to look like this"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/the_code" />

            <TextView
                style="@style/textView_style"
                android:layout_margin="20dp"
                android:text="Send SMS with any phone to the phone number where the app is installed and configured with a keycode e.g 100"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/sms_how" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif"
            android:text="@string/app_name"
            android:textSize="30dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center">
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:text="@string/author_list" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center">

        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:fontFamily="sans-serif"
            android:textAlignment="center"
            android:text="@string/about_app"
            android:layout_weight="0.67" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/author_list" />

        <TextView
            android:id="@+id/levit"
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/levit"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/jerusha"
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/jerusha"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/betty"
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/betty"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/doris"
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/doris"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/githubURL"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/github" />

    </LinearLayout>
</ScrollView>
</RelativeLayout>